--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,9 @@
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
+\usepackage[utf8]{inputenc}
+
 \begin{document}
 	\title{Adellian}
+	\textbf{Hello, world!}
+
+	This is a text.
 \end{document}
