--- a/lang.tex
+++ b/lang.tex
@@ -2,12 +2,29 @@
 
 \documentclass[12pt]{article}
 \usepackage{fontspec}
+\usepackage{xcolor}
 \setmainfont{Linux Libertine O}
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
 
+\definecolor{light-gray}{gray}{0.89}
+
+
+
+%usage: example, gloss, translation.
+\newcommand{\example}[3]{
+	\colorbox{light-gray}{
+		\parbox{5in}{
+			\emph{Ex.: #1}\\
+				  \emph{#2}\\
+				  #3
+		  }
+	}
+}
+
 \begin{document}
 	\title{Adellian: Language}
+	\author{quantumFeline}
 	\maketitle
 
 	\section{Preamble}
@@ -15,6 +32,12 @@
 	\tableofcontents
 
 	\section{General information}
+	
+	Adellian is a language spoken by a country in a parallel world, Adella, that only recently got in contact with our own. This paper is an attempt to create the first overview of it as a foundation for the further research, as well a learning resource for experienced linguists. 
+	
+	While there are several different languages coexisting in the Adellian lands, Adellian is considered the lingua franca, the language of government, science, but most importantly, poetry, lyrics, and literature.
+	
+	Some parts of the overview are hard to understand without some background regarding the cultural environment where the language appeared. For more information about Adella please refer the second document present in the repository, "Adellian: Lore".
 
 	\section{Phonology}
 
@@ -25,15 +48,15 @@
 		Consonants & Labial & Dental & Alveolar &
 		Retroflex & Palatal & Velar & Glottal \\
 		\hline
-		Nasal & m & \multicolumn{2}{c}{n} & & ɲ & ŋ & \\
-		Stops \& Affricates & p & t & d & ʈʂ & c & k & \\
+		Nasals & m & \multicolumn{2}{c}{n} & & ɲ & ŋ & \\
+		Stops & p & t & d & ʈʂ & c & k & \\
 		Fricatives & f & θ & s & ʂ & ç & & h \\
 		Continuants & ʋ & ð & z & ʐ & j & & ɦ \\
 		Liquids & & ɫ & r & ɻ & lʲ & & \\
 		\hline
 	\end{tabular}
 
-	Adellian has an average consonant inventory of 26 distinct sounds in total. However, it is interesting in regard to having somewhat wide range of continuant and liquid sounds in comparison to the total number of stops. It creates an impression of a "smooth", "flowing" language.
+	Adellian has an average consonant inventory of 26 distinct sounds in total. However, it is interesting in regard to having somewhat wide range of continuants in comparison to the total number of stops. It creates an impression of a ``smooth", ``flowing" language.
 
 	Sounds pairs like /t-d/, /s-z/, /ʂ-ʐ/, /θ–ð/ can be described as \emph{fortis-lenis} pairs; it would be incorrect to describe them mainly by voicedness. However, sounds like /f/ and /ʋ/ aren't typically grouped into pairs.
 
@@ -54,7 +77,7 @@
 		\hline
 	\end{tabular}
 
-	Vowel inventory in Adellian is higher than average as well, and consists of 9-10 distinct phonemes. It can be analyzed as having a tenseness contrast, with /i e ä o u/ being tense, and /ɪ ɛ ə ø y/ being their corresponding lax counterparts. In some dialects, there is an additional length contrast that, however, gets lost in fast speech or singing.
+	Vowel inventory in Adellian is higher than average, and consists of 9-10 distinct phonemes. It can be analyzed as having a tenseness contrast, with /i e ä o u/ being tense, and /ɪ ɛ ə ø y/ being their corresponding lax counterparts. In some dialects, there is an additional length contrast that, however, gets lost in fast speech or singing.
 
 	/ə/ (shwa) is sometimes analyzed as an allophone of /a/, as it only appears in certain words changes, is never stressed, and doesn't show up in phonemic contrasts.
 
@@ -75,10 +98,10 @@
 		Consonants & Labial & Dental & Alveolar &
 		Retroflex & Palatal & Velar & Glottal \\
 		\hline
-		Nasal & m & \multicolumn{2}{c}{n} & & ň & q & \\
-		Stops \& Affricates & p & t & d & č & c & k & \\
+		Nasals & m & \multicolumn{2}{c}{n} & & ň & q & \\
+		Stops & p & t & d & č & c & k & \\
 		Fricatives & f & ť & s & š & x & & h \\
-		Continuants & v & ď & z & ž & j & & g \\
+		Continuants & v & ď & z & ž & j & & g \\	
 		Liquids & & l & ř & r & ľ & & \\
 		\hline
 	\end{tabular}
@@ -90,13 +113,13 @@
 	High & i & ü & y & u \\
 	Mid & e & ö & ` & o \\
 	Low & ä & & a & \\
-	Dipthongs & \multicolumn{4}{c}{ay ey oy au} \\
+	Dipthongs & \multicolumn{4}{c||}{ay ey oy au} \\
 	\hline
 	\end{tabular}
 
 	\section{Pronouns}
 
-	\begin{tabular}{|| c c c c c c ||}
+	\begin{tabular}{|| c | c | c | c | c | c ||}
 		\hline
 		0 & I & II & I + II & III, animate & III, inanimate\\
 		\hline
@@ -105,6 +128,8 @@
 	\end{tabular}
 
 	Basic pronouns present in Adellian are shown in the table above. They are declined by case and number, like ay other noun, but typically do not require any article.
+	
+	Zero pronoun is used when the subject is abstract, somewhat like ``one" or ``generic you" in English. Additionally, it case serve as a placeholder pronoun when a word root is needed grammatically, but isn't present, meaning-wise.
 
 	Demonstratives are distinguished by three degrees of proximity.
 
@@ -117,5 +142,14 @@
 	\end{tabular}
 
 	\section{Nouns}
+	
+	Adellian nouns decline in the following way:
+	
+	\emph{root + article + number + case [+ locative postfix]}
+	
+	\example{kassaqdes}
+			 {kassa + NEG + DET + ACC}
+		 	 {whom? - the majority of cats}
+	
 
 \end{document}
