--- a/lang.tex
+++ b/lang.tex
@@ -90,8 +90,12 @@
 	TODO: syllable structure
 
 	\section{Orthography}
+	
+	Adellian speakers use right-to-left abugida.
 
-	This document is going to mostly use Latin transcription of the words. 
+	This document is going to mostly use Latin transcription of the words.
+	
+	\subsection{Romanization} 
 
 	\begin{tabular}{||c | c c c c c c c||}
 		\hline
@@ -123,21 +127,21 @@
 		\hline
 		0 & I & II & I + II & III, animate & III, inanimate\\
 		\hline
-		la & mi & tu & mito & ně & sy\\
+		la & mi & tu & mito & ne & sy\\
 		\hline
 	\end{tabular}
 
-	Basic pronouns present in Adellian are shown in the table above. They are declined by case and number, like ay other noun, but typically do not require any article.
+	Basic pronouns present in Adellian are shown in the table above. They are declined by case and number, like any other noun, but typically do not require any article.
 	
 	Zero pronoun is used when the subject is abstract, somewhat like ``one" or ``generic you" in English. Additionally, it case serve as a placeholder pronoun when a word root is needed grammatically, but isn't present, meaning-wise.
 
 	Demonstratives are distinguished by three degrees of proximity.
 
-	\begin{tabular}{|| c c c ||}
+	\begin{tabular}{|| c | c | c ||}
 		\hline
 		Proximal & Medial & Distal \\
 		\hline
-		mes & tes &  nay \\
+		mes & täs &  nay \\
 		\hline
 	\end{tabular}
 
@@ -147,7 +151,7 @@
 	
 	\emph{root + article + number + case [+ locative postfix]}
 	
-	\example{kassaqdes}
+	\example {kassaqdes}
 			 {kassa + NEG + DET + ACC}
 		 	 {whom? - the majority of cats}
 	
