--- a/lore.tex
+++ b/lore.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
+\setlength{\parindent}{1em}
+\setlength{\parskip}{1em}
 
 \begin{document}
 	\title{Adellian: Lore}
@@ -13,6 +15,16 @@
 	
 	\section{General information}
 	
-	hello	
+	Adella has various legends that tell the stories of significantly more developed civilization existing long before their own, but then collapsing because of a technological catastrophe. Many of the religious and other ancient texts Adellians consider to be the shards of the knowledge of that ancient civilization.
+	
+	It is unclear how true these stories are; alternative hypotheses exist that this is merely a way to give more weight to the discoveries of Adellian religious figures of today, or, alternatively, traces of parallel-world contacts happening before our own. At the same time, if this theory is to be confirmed, that does explain a lot of the peculiarities we observe.
+	
+	Currently, the technological development of Adella, on average, reminds of late XVIII-early XIX century on Earth. However, it would not be correct to draw a direct comparison, as their level of development varies significantly from field to field and does not directly correspond to any known historical era.
+	
+	The political system is complicated, but also seems to be decentralized almost to utterly medieval extent. The institutes, while full of complicated checks-and-balances, cannot be really considered democratic, and the laws are deeply tied with their tritheistic religion Adellian fully and wholeheartedly believe in their vast majority.
+	
+	The theoretical medical knowledge is quite advanced, which also influences some of the existing cultural customs; at the same time, there isn't enough technological invention to make use of the full potential of their academy base.
+	
+	The cultural values seem, in some regards, surprisingly humane for a society of their level of development, and pretty cruel in other respects. A traveller that wishes to pay a visit to Adella must be informed about these cultural differences and careful to not to get in any trouble.
 	
 \end{document}
