Simplify the vowel inventory?

--- a/Adellian/lang.tex
+++ b/Adellian/lang.tex
@@ -64,18 +64,18 @@
 
 	\subsection{Vowels}
 
-	\begin{tabular}{|| c | c c c c || }
+	\begin{tabular}{|| c | c c c || }
 		\hline
-		Vowels & Front unrounded & Front rounded & Central & Back \\
+		Vowels & Front & Central & Back \\
 		\hline
-		High & i & y & ɪ & u \\
-		Mid & e & ø & (ə) & o \\
-		Low & ɛ & & ä & \\
-		Dipthongs & \multicolumn{4}{c||}{aɪ ɛɪ oɪ aʊ̯} \\
+		High & i & ɪ & u \\
+		Mid & e & (ə) & o \\
+		Low & ɛ & ä & \\
+		Dipthongs & \multicolumn{3}{c||}{aɪ ɛɪ oɪ aʊ̯} \\
 		\hline
 	\end{tabular}
 
-	Vowel inventory in Adellian is higher than average, and consists of 9-10 distinct phonemes. It can be analyzed as having a tenseness contrast, with /i e ä o u/ being tense, and /ɪ ɛ ə ø y/ being their corresponding lax counterparts. In some dialects, there is an additional length contrast that, however, gets lost in fast speech or singing.
+	Vowel inventory in Adellian is higher than average, and consists of 7-8 distinct phonemes. It can be analyzed as having a tenseness contrast, with /i e ä/ being tense, and /ɪ ɛ ə/ being their corresponding lax counterparts. /o u/ do not have a pair. In some dialects, there is an additional length contrast that, however, gets lost in fast speech or singing.
 
 	/ə/ (shwa) is sometimes analyzed as an allophone of /a/, as it only appears in certain words changes, is never stressed, and doesn't show up in phonemic contrasts.
 
@@ -108,14 +108,14 @@
 		\hline
 	\end{tabular}
 
-	\begin{tabular}{|| c | c c c c || }
+	\begin{tabular}{|| c | c c c || }
 		\hline
-	Vowels & Front unrounded & Front rounded & Central & Back \\
+	Vowels & Front & Central & Back \\
 	\hline
-	High & i & ü & y & u \\
-	Mid & e & ö & ` & o \\
-	Low & ä & & a & \\
-	Dipthongs & \multicolumn{4}{c||}{ay ey oy au} \\
+	High & i & y & u \\
+	Mid & e & ` & o \\
+	Low & ä & a & \\
+	Dipthongs & \multicolumn{3}{c||}{ay ey oy au} \\
 	\hline
 	\end{tabular}
 
