--- a/Adellian/vocabulary.tex
+++ b/Adellian/vocabulary.tex
@@ -56,7 +56,7 @@
 			 {Sibling; brother, sister. The kids you grew up with in the same household, and shared the caretaker/s (\emph{mamaj}). Can be metaphorically used in regard to very close friends as well.}
 			 {}
 	
-	\defnoun {Mila}{an.}
+	\defnoun {Tona}{an.}
 			 {A person you (or someone else) take care of as \emph{mama}. The closest analogue in English is "son/daughter".}
 			 {}
 	
