--- a/Adellian2.tex
+++ b/Adellian2.tex
@@ -134,18 +134,18 @@
 	\subsection{Articles}
 	
 	Adellian has two articles: \word{e[l]} for "a/some", to emphasize that the object discussed is not specific, just that there's some; and \word{an[a]} for "any/in general", to talk about abstractions. By default, no article is used; that indicates definiteness - a specific object discussed.
-	There's also a for of the indefinite article \word{ňe[l]} - "no".
+	There's also a form of the indefinite article \word{ňe[l]} - "no".
 	
-	\example{Kass šewtal topuki.}
-	{cat.AG sit.CONT table.SET.on}
+	\example{Kass topuki šewtal.}
+	{cat.AG table.SET.on sit.CONT}
 	{The cat is sitting on the table.}
 	
-	\example{Ňe kass šewtal topuki.}
-	{cat.AG.NIND sit.CONT table.SET.on}
+	\example{Ňe kass topuki šewtal.}
+	{cat.AG.NIND table.SET.on sit.CONT}
 	{There's no cat sitting on the table.}
 	
-	\example{Ana kass šewteli topuki.}
-	{cat.AG.GEN sit.HAB table.SET.on}
+	\example{Ana kass topuki šewteli.}
+	{cat.AG.GEN table.SET.on sit.HAB}
 	{Cats tend to sit on the tables.}
 	
 	\subsection{Numbers}
@@ -165,7 +165,7 @@
 	\\
 	\rule{0pt}{5ex} 
 	
-	\phrase{Okos koušoxov}{[Many] eyes of a monster}
+	\phrase{Okos koušoxov}{Many eyes of a monster}
 	
 	&
 	
@@ -174,5 +174,20 @@
 	\end{tabular}
 	
 	\subsection{Cases}
+	
+	TODO
+	Agent, Conductor, Accused, Genitive, Instrumental, Setting
+	
+	\section{Verbs}
+	
+	TODO
+	Infinitive: -en
+	
+	\subsection{Tenses}
+	
+	TODO
+	Perfect, continuous, habitual. No copula
+	
+	Past (+remote) and future (+remote) formed by a separate aprticle, not unique to verbs
 
 \end{document}
